--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^5.17.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
-    "openai": "^4.54.0"
+    "openai": "^4.54.0",
+    "zod": "^3.23.8"
   }
 }
